Refactor: 메인퀘스트 호출 메서드 내 중복 로직 메서드화